# improved-flask-tutorial-app

./: .gitignore  MANIFEST.in  README.md  config.py  pyproject.toml  setup.cnf  setup.py
flaskr/: __init__.py  auth.py  blog.py  db.py  models.py  schema.sql
flaskr/static/: script.js  style.css
flaskr/static/css/: index.css
flaskr/static/js/: index.js
flaskr/templates/: base.html  macros.html
flaskr/templates/auth/: login.html  register.html
flaskr/templates/blog/: create.html  index.html  update.html
tests/: test_auth.py  test_blog.py
